--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -5,11 +5,13 @@
 
 h1 {
   text-align: center;
+  font-family: "Helvetica";
 }
 
 a {
   color: inherit;
   text-decoration: none;
+
 }
 
 .cards__container {
