--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -4,6 +4,22 @@
     font-weight: bold;
 }
 
+.text-link:link {
+    text-decoration: none;
+}
+
+.text-link:visited {
+    text-decoration: none;
+}
+
+.text-link:hover {
+    text-decoration: underline;
+}
+
+.text-link:active {
+    text-decoration: underline;
+}
+
 .section {
     display: flex;
     justify-content: center;
@@ -14,11 +30,12 @@
 }
 
 .paragraph {
+    font-size: 18px;
     font-family: 'Helvetica';
     text-align: center;
     margin-top: 20px;
     margin-bottom: 40px;
     max-width: 700px;
     word-wrap: break-word;
-    line-height: 22px;
+    line-height: 25px;
 }
